# daily-snapshot-hub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: _shared-commit.yml  rss.yml  weather.yml  weekly-report.yml
config/: locations.yml  rss-feeds.yml
documents/: system-guide.html
reports/weekly/: 2026-W15.md  2026-W16.md  2026-W17.md  2026-W18.md  2026-W19.md  2026-W20.md  2026-W21.md  2026-W22.md  2026-W23.md  2026-W24.md  2026-W25.md  2026-W26.md  2026-W27.md  2026-W28.md  2026-W29.md
snapshots/rss/: 2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-07.md  2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  (+57 more)
snapshots/weather/: 2026-04.csv  2026-05.csv  2026-06.csv  2026-07.csv
src/daily_hub/collectors/: rss.py  weather.py
src/daily_hub/common/: dates.py  markdown.py  paths.py
src/daily_hub/reporters/: weekly.py
state/: rss-last-seen.json
tests/: test_rss.py  test_weather.py  test_weekly.py
